# earl

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  NOTES.md  README.md  pyproject.toml  requirements_linux_x86_64.txt
.github/workflows/: check.yml  ci.bazelrc
earl/: BUILD.bazel  core.py  metric_key.py
earl/agents/r2d2/: BUILD.bazel  atari.ipynb  networks.py  r2d2.py  run_asterix.ipynb  run_atari.py  run_experiment.py  run_gymnax_cartpole.py  run_gymnax_pong.py  test_r2d2.py  test_r2d2_learns.py  train_r2d2_asterix.ipynb  utils.py
earl/agents/random_agent/: BUILD.bazel  random_agent.py
earl/agents/simple_policy_gradient/: BUILD.bazel  __init__.py  simple_policy_gradient.py  test_simple_policy_gradient.py
earl/agents/simple_policy_gradient/tests/: test_simple_policy_gradient.py
earl/environment_loop/: BUILD.bazel  __init__.py  _common.py  gymnasium_loop.py  gymnax_loop.py  test_common.py  test_gymnasium_loop.py  test_gymnasium_loop_multi_device.py  test_gymnax_loop.py  test_gymnax_loop_multi_device.py
earl/experiments/: BUILD.bazel  config.py  run_experiment.py  test_run_experiment.py
earl/experiments/tests/: test_run_experiment.py
earl/utils/: BUILD.bazel  eqx_filter.py  prng.py  sharding.py  test_sharding.py
src/earl/: core.py  metric_key.py
src/earl/agents/: uniform_random_agent.py
src/earl/agents/random_agent/: BUILD.bazel  random_agent.py
src/earl/agents/simple_policy_gradient/: __init__.py
src/earl/agents/simple_policy_gradient/tests/: test_simple_policy_gradient.py
src/earl/environment_loop/: BUILD.bazel  __init__.py  _common.py  gymnasium_loop.py  gymnax_loop.py  test_common.py  test_gymnasium_loop.py  test_gymnax_loop.py
src/earl/experiments/: config.py  run_experiment.py
src/earl/experiments/tests/: test_run_experiment.py
src/earl/logging/: __init__.py  _keep_last_logger.py  _memory_logger.py  base.py  dispatcher.py  metric_key.py  mlflow.py  string_printer.py
src/earl/logging/tests/: test_base.py  test_dispatcher.py  test_mlflow.py  test_string_printer.py
src/earl/utils/: eqx_filter.py
tools/: BUILD.bazel  lint.sh  linters.bzl  requirements_basedpyright.in  requirements_basedpyright.txt
tools/patches/: orbax-remove-BUILD.patch
tools/py_test/: py_test.bzl
