load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")

pip_compile(
    name = "generate_requirements_linux_x86_64_txt",
    args = [
        "--generate-hashes",
        "--emit-index-url",
        "--no-strip-extras",
        "--extra=test",
    ],
    python_platform = "x86_64-unknown-linux-gnu",
    requirements_in = "//:pyproject.toml",
    requirements_txt = "requirements_linux_x86_64.txt",
)

create_venv(
    name = "dot_venv_linux_x86_64",
    destination_folder = ".venv",
    requirements_txt = ":requirements_linux_x86_64.txt",
)

buildifier(
    name = "buildifier.check",
    lint_mode = "warn",
    mode = "diff",
)
