load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_uv//uv:venv.bzl", "create_venv")

pip_compile(
    name = "generate_requirements_linux_x86_64_txt",
    args = [
        "--generate-hashes",
        "--emit-index-url",
        "--no-strip-extras",
        "--extra=test",
    ],
    python_platform = "x86_64-unknown-linux-gnu",
    requirements_in = "//:pyproject.toml",
    requirements_txt = "requirements_linux_x86_64.txt",
)

create_venv(
    name = "dot_venv_linux_x86_64",
    destination_folder = ".venv",
    requirements_txt = ":requirements_linux_x86_64.txt",
)

# NB: this alias does NOT cause Bazel's Loading phase to load the tools/BUILD file.
# That's important as we don't want users to wait for "Eager fetching" for ~EVERY language which
# that build file loads from.
alias(
    name = "format",
    actual = "//tools:format",
)

alias(
    name = "format.check",
    actual = "//tools:format.check",
)

exports_files(["pyproject.toml"])
