# https://python-poetry.org/docs/pyproject/
[project]
dependencies = [
    "draccus",
    "equinox>=0.11.11",
    "gymnax",
    "gymnasium>=1.0.0",
    "jax_loop_utils",
    "jax>=0.4.0",
    "jaxtyping>=0.2.0",
    "orbax-checkpoint==0.11.1",
    "tensorstore==0.1.68",      # transitive of orbax-checkpoint, pinned to avoid bug https://github.com/google/orbax/issues/1429#issuecomment-2543832552
    "tqdm>=4.0.0",
]
name = "earl"
version = "0.0.0"
description = "Reinforcement learning with Equinox."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gary Miguel", email = "garymm@garymm.org" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["Equinox", "JAX", "Reinforcement Learning"]

[project.optional-dependencies]
agent-r2d2 = [
    "gymnasium[atari]>=1.0.0",
    "gymnasium[other]>=1.0.0",
    "chex>=0.1.88",
    "distrax>=0.1.5",
    "jax_loop_utils[audio-video]",
    "jax_loop_utils[mlflow]",      # TODO: remove, use tensorboard writer
    "optax>=0.2.4",
]
cuda = ["jax[cuda12]>=0.4.0", "nvtx>=0.2.10"]
jupyter = ["ipykernel>=6.0.0"]
test = ["coverage>=7.0.0", "pytest>=8.0.0", "pytest-repeat==0.9.3"]


[project.urls]
Homepage = "http://github.com/garymm/earl"

[dependency-groups]
dev = ["basedpyright==1.26.0", "ruff>=0.9.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["test_*.py", "BUILD.bazel"]

[tool.hatch.build.targets.wheel]
packages = ["earl"]

[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
[tool.uv]
# restrict to platforms we care about so that version resolution is faster and more likely to succeed
# (e.g. don't fail if a package isn't built for windows)
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version>='3.12'",
]

[tool.uv.sources]
draccus = { git = "https://github.com/dlwh/draccus", rev = "9b690730ca108930519f48cc5dead72a72fd27cb" }
gymnax = { git = "https://github.com/Astera-org/gymnax", rev = "c52a7dac7b41514297d2e98b1b288d56715a5165" }
jax_loop_utils = { git = "https://github.com/Astera-org/jax_loop_utils", rev = "5cd50bfa0a6e42ccc7438fb556d80e1ec3074932" }

[tool.basedpyright]
include = ["earl"]
typeCheckingMode = "standard"
