load("@aspect_rules_lint//format:defs.bzl", "format_multirun")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("@rules_uv//uv:pip.bzl", "pip_compile")

format_multirun(
    name = "format",
    python = "@aspect_rules_lint//format:ruff",
    starlark = "@buildifier_prebuilt//:buildifier",
    visibility = ["//visibility:public"],
)

pip_compile(
    name = "generate_requirements_basedpyright_txt",
    python_platform = "x86_64-unknown-linux-gnu",
    requirements_in = ":requirements_basedpyright.in",
    requirements_txt = "requirements_basedpyright.txt",
)

py_console_script_binary(
    name = "basedpyright",
    pkg = "@basedpyright//basedpyright",
    script = "basedpyright",
)
