load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

py_library(
    name = "common",
    srcs = ["_common.py"],
    deps = [
        "//earl:core",
        "//earl:metric_key",
        "@pypi//equinox",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//jax_loop_utils",
        "@pypi//jaxtyping",
    ],
)

py_test(
    name = "common_test",
    srcs = ["test_common.py"],
    deps = [
        ":common",
        "//earl:core",
        "@pypi//jax",
        "@pypi//pytest",
    ],
)

py_library(
    name = "environment_loop",
    srcs = ["__init__.py"],
    deps = [
        ":common",
    ],
)

py_library(
    name = "gymnasium_loop",
    srcs = ["gymnasium_loop.py"],
    deps = [
        ":common",
        ":environment_loop",
        "//earl:core",
        "//earl:metric_key",
        "//earl/utils:eqx_filter",
        "@pypi//equinox",
        "@pypi//gymnasium",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//jaxtyping",
        "@pypi//tqdm",
    ],
)

py_test(
    name = "gymnasium_loop_test",
    srcs = ["test_gymnasium_loop.py"],
    deps = [
        ":gymnasium_loop",
        "//earl:core",
        "//earl:metric_key",
        "//earl/agents/random_agent",
        "//earl/utils:prng",
        "@pypi//gymnasium",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//numpy",
        "@pypi//pytest",
    ],
)

py_library(
    name = "gymnax_loop",
    srcs = ["gymnax_loop.py"],
    deps = [
        ":common",
        ":environment_loop",
        "//earl:core",
        "//earl:metric_key",
        "//earl/utils:eqx_filter",
        "@pypi//equinox",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//jaxtyping",
        "@pypi//tqdm",
    ],
)

py_test(
    name = "gymnax_loop_test",
    srcs = ["test_gymnax_loop.py"],
    deps = [
        ":gymnax_loop",
        "//earl:core",
        "//earl:metric_key",
        "//earl/agents/random_agent",
        "//earl/utils:prng",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//pytest",
    ],
)
