load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

py_library(
    name = "common",
    srcs = ["_common.py"],
    deps = [
        "//earl:core",
        "//earl:metric_key",
        "@pypi//equinox",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//jax_loop_utils",
        "@pypi//jaxtyping",
    ],
)

py_test(
    name = "test_common",
    timeout = "short",
    srcs = ["test_common.py"],
    deps = [
        ":common",
        "//earl:core",
        "@pypi//absl_py",
        "@pypi//jax",
    ],
)

py_library(
    name = "environment_loop",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [":common"],
)

py_library(
    name = "gymnasium_loop",
    srcs = ["gymnasium_loop.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        ":environment_loop",
        "//earl:core",
        "//earl:metric_key",
        "//earl/utils:eqx_filter",
        "@pypi//equinox",
        "@pypi//gymnasium",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//jaxtyping",
        "@pypi//tqdm",
    ],
)

py_test(
    name = "test_gymnasium_loop",
    timeout = "moderate",
    srcs = ["test_gymnasium_loop.py"],
    deps = [
        ":gymnasium_loop",
        "//earl:core",
        "//earl:metric_key",
        "//earl/agents/random_agent",
        "//earl/utils:prng",
        "@pypi//absl_py",
        "@pypi//gymnasium",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//numpy",
    ],
)

py_library(
    name = "gymnax_loop",
    srcs = ["gymnax_loop.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        ":environment_loop",
        "//earl:core",
        "//earl:metric_key",
        "//earl/utils:eqx_filter",
        "@pypi//equinox",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//jaxtyping",
        "@pypi//tqdm",
    ],
)

py_test(
    name = "test_gymnax_loop",
    timeout = "short",
    srcs = ["test_gymnax_loop.py"],
    deps = [
        ":gymnax_loop",
        "//earl:core",
        "//earl:metric_key",
        "//earl/agents/random_agent",
        "//earl/utils:prng",
        "@pypi//absl_py",
        "@pypi//gymnax",
        "@pypi//jax",
    ],
)
