load("@aspect_rules_py//py:defs.bzl", "py_library")
load("//tools/py_test:py_test.bzl", "py_test")

py_library(
    name = "prng",
    srcs = ["prng.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//jax",
    ],
)

py_library(
    name = "eqx_filter",
    srcs = ["eqx_filter.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//equinox",
        "@pypi//jax",
    ],
)

py_library(
    name = "sharding",
    srcs = ["sharding.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//jax",
    ],
)

py_test(
    name = "test_sharding",
    srcs = ["test_sharding.py"],
    env = {
        "XLA_FLAGS": "--xla_force_host_platform_device_count=2",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//earl/utils:sharding",
        "@pypi//jax",
    ],
)
