load("@aspect_rules_py//py:defs.bzl", "py_library")
load("//tools/py_test:py_test.bzl", "py_test")

py_library(
    name = "r2d2",
    srcs = [
        "networks.py",
        "r2d2.py",
        "utils.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//earl:core",
        "@pypi//chex",
        "@pypi//distrax",
        "@pypi//equinox",
        "@pypi//jax",
        "@pypi//jaxtyping",
        "@pypi//optax",
    ],
)

py_test(
    name = "test_r2d2",
    timeout = "long",
    srcs = ["test_r2d2.py"],
    filterwarnings = [
        "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated.:DeprecationWarning",
        "ignore:Shape is deprecated; use StableHLO instead.:DeprecationWarning",
    ],
    shard_count = 2,
    deps = [
        ":r2d2",
        "//earl:core",
        "//earl/environment_loop:gymnasium_loop",
        "//earl/environment_loop:gymnax_loop",
        "@pypi//envpool",
        "@pypi//gymnasium",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//jax_loop_utils",
        "@pypi//numpy",
        "@pypi//optax",
        "@pypi//pytest",
    ],
)

py_test(
    name = "test_r2d2_learns",
    timeout = "long",
    srcs = ["test_r2d2_learns.py"],
    filterwarnings = [
        "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated.:DeprecationWarning",
        "ignore:Shape is deprecated; use StableHLO instead.:DeprecationWarning",
    ],
    tags = ["manual"],
    deps = [
        ":r2d2",
        "//earl:core",
        "//earl/environment_loop:gymnax_loop",
        "@pypi//gymnax",
        "@pypi//jax",
        "@pypi//jax_loop_utils",
        "@pypi//numpy",
        "@pypi//pytest",
    ],
)
